Bug 505798 - JSAPI test harness. r=Waldo.